--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-    <title>Psychedelic Origami — Sequential Folding + Presets + FOLD</title>
+    <title>Origata — Sequential Folding + Presets + FOLD</title>
     <meta name="theme-color" content="#050509" />
     <style>
       html, body { height: 100%; margin: 0; background: #050509; }
@@ -76,3 +76,4 @@
     <noscript>This page needs JavaScript enabled.</noscript>
   </body>
 </html>
+
