--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Origami — Paper-Like Folds + Crane</title>
+  <title>Origata v0.24</title>
   <meta name="theme-color" content="#050509" />
   <style>
     html, body { height: 100%; margin: 0; background: #050509; }
@@ -107,3 +107,4 @@
   <noscript>This page needs JavaScript enabled.</noscript>
 </body>
 </html>
+
