--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       <label>
         Model / Preset
         <select id="preset">
+          <optgroup label="Bird">
+            <option value="bird-demo">Flapping Bird (Demo, sequential masks)</option>
+            <option value="bird-fold">Flapping Bird (MIT FOLD import)</option>
+          </optgroup>
           <optgroup label="Simple folds">
             <option value="half-vertical-valley">Half Vertical (Valley)</option>
             <option value="half-horizontal-valley">Half Horizontal (Valley)</option>
@@ -75,6 +79,9 @@
         Fold Progress
         <input id="progress" type="range" min="0" max="1" step="0.001" value="0.7" />
       </label>
+      <label class="muted" title="Auto-oscillate this slider">
+        <input id="autoProgress" type="checkbox" /> Auto
+      </label>
       <button id="btnAnim">Play</button>
       <button id="btnReset">Reset</button>
       <button id="btnStepPrev">◀ Step</button>
@@ -85,6 +92,9 @@
       <label>
         Speed
         <input id="speed" type="range" min="0.05" max="3" step="0.01" value="0.9" />
+      </label>
+      <label class="muted" title="Auto-oscillate this slider">
+        <input id="autoSpeed" type="checkbox" /> Auto
       </label>
       <label>
         Easing
@@ -107,4 +117,3 @@
   <noscript>This page needs JavaScript enabled.</noscript>
 </body>
 </html>
-
