--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Origata v0.25</title>
+  <title>Origata v0.26</title>
   <meta name="theme-color" content="#050509" />
   <style>
     html, body { height: 100%; margin: 0; background: #050509; }
@@ -30,7 +30,7 @@
     .muted { opacity: 0.8 }
   </style>
 
-  <!-- ESM polyfill (safe on modern browsers) -->
+  <!-- ESM polyfill -->
   <script async src="https://unpkg.com/es-module-shims@2.6.2/dist/es-module-shims.js"></script>
 
   <!-- Import map: three.js + lil-gui -->
@@ -53,13 +53,12 @@
       <label>
         Model / Preset
         <select id="preset">
-          <optgroup label="Crane">
-            <option value="crane-demo">Crane (Demo, sequential masks)</option>
-            <option value="crane-fold">Crane (MIT FOLD import)</option>
+          <optgroup label="Primitives">
+            <option value="half-vertical-valley">Book Fold (Half Vertical, Valley)</option>
+            <option value="gate-valley">Gate Fold (2 × Valley)</option>
           </optgroup>
-          <optgroup label="Bird">
-            <option value="bird-demo">Flapping Bird (Demo, sequential masks)</option>
-            <option value="bird-fold">Flapping Bird (MIT FOLD import)</option>
+          <optgroup label="Origami">
+            <option value="crane-demo">Crane (Demo, sequential masks)</option>
           </optgroup>
         </select>
       </label>
@@ -78,9 +77,9 @@
     </div>
 
     <div class="row">
-      <label>
-        Speed
-        <input id="speed" type="range" min="0.05" max="3" step="0.01" value="0.25" />
+      <label title="Left = 0.2× slower, Mid = 1×, Right = 5× faster">
+        Speed (×0.2 … ×5)
+        <input id="speed" type="range" min="0" max="1" step="0.001" value="0.5" />
       </label>
       <label>
         Easing
