--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Origata v0.26</title>
+  <title>Origata v0.28</title>
   <meta name="theme-color" content="#050509" />
   <style>
     html, body { height: 100%; margin: 0; background: #050509; }
@@ -58,7 +58,7 @@
             <option value="gate-valley">Gate Fold (2 × Valley)</option>
           </optgroup>
           <optgroup label="Origami">
-            <option value="crane-demo">Crane (Demo, sequential masks)</option>
+            <option value="crane-demo">Crane (Demo, timeline + masks)</option>
           </optgroup>
         </select>
       </label>
@@ -94,7 +94,7 @@
 
     <div class="row">
       <button id="btnSnap" title="Save current frame as PNG">Save PNG</button>
-      <label class="muted">Look controls are in the lil‑gui panel (top‑right). Each has an Auto toggle.</label>
+      <label class="muted">Open the lil‑gui “Look” panel (top‑right) for Texture Type + Texture Scale (with Auto).</label>
     </div>
   </div>
 
