--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         Model / Preset
         <select id="preset">
           <optgroup label="Primitives">
-            <option value="half-vertical-valley">Book Fold (Half Vertical, Valley)</option>
-            <option value="gate-valley">Gate Fold (2 × Valley)</option>
+            <option value="half-vertical-valley">Book Fold</option>
+            <option value="gate-valley">Gate Fold</option>
           </optgroup>
         </select>
       </label>
