--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
   <div id="app"></div>
   <div class="brand">Origami — rigid hinges • drag to orbit, wheel to zoom</div>
 
-  <div class="hud">
-    <div class="row">
-      <label>
-        Model / Preset
-        <select id="preset">
-          <optgroup label="Primitives">
-            <option value="half-vertical-valley">Book Fold</option>
-            <option value="gate-valley">Gate Fold</option>
-          </optgroup>
-        </select>
-      </label>
-      <button id="btnApply">Apply</button>
-    </div>
+
+  <div class="row">
+    <label>
+      Model / Preset
+      <select id="preset">
+        <optgroup label="Primitives">
+          <option value="half-vertical-valley" selected>Book Fold</option>
+          <option value="gate-valley">Gate Fold</option>
+        </optgroup>
+      </select>
+    </label>
+    <button id="btnApply">Apply</button>
+  </div>
 
     <div class="row">
       <label>
