--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
   <div id="app"></div>
-  <div class="brand">Origami — rigid hinges • drag to orbit, wheel to zoom</div>
+  <div class="brand">Origata v0.29 - drag to orbit, wheel to zoom</div>
 
   <div class="hud">
     <div class="row">
@@ -99,3 +99,4 @@
   <noscript>This page needs JavaScript enabled.</noscript>
 </body>
 </html>
+
