--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="row">
       <button id="btnSnap" title="Save current frame as PNG">Save PNG</button>
-      <label class="muted">Open the lil‑gui “Look” panel (top‑right) for Texture Type + Texture Scale (with Auto).</label>
+      <label class="muted">Please use the Auto checkboxes and Speed for animation.</label>
     </div>
   </div>
 
@@ -99,4 +99,5 @@
   <noscript>This page needs JavaScript enabled.</noscript>
 </body>
 </html>
+
 
