--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="row">
       <button id="btnSnap" title="Save current frame as PNG">Save PNG</button>
-      <label class="muted">Please use the Auto checkboxes and Speed for animation.</label>
+      <label class="muted">Entity FX Inc / 2025</label>
     </div>
   </div>
 
@@ -99,5 +99,6 @@
   <noscript>This page needs JavaScript enabled.</noscript>
 </body>
 </html>
+
 
 
