--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Holographic Crystal Grid</title>
+    <title>Origata v0.36</title>
     <style>
         body {
             margin: 0;
