--- a/index.html
+++ b/index.html
@@ -1,45 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Origata v0.36</title>
-    <style>
-        body {
-            margin: 0;
-            background-color: #000000;
-            color: white;
-            font-family: sans-serif;
-            overflow: hidden;
-        }
-        #webgl-canvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            outline: none;
-        }
-        #gui-container {
-            position: fixed;
-            top: 0;
-            right: 0;
-            z-index: 100;
-        }
-    </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Iridescent Folding Crystal</title>
+  <style>
+    :root {
+      --bg: #000;
+    }
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background: var(--bg);
+      overflow: hidden;
+      color: #ddd;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+    }
+    #app {
+      position: fixed;
+      inset: 0;
+      background: var(--bg);
+    }
+    canvas#scene {
+      width: 100%;
+      height: 100%;
+      display: block;
+      background: var(--bg);
+    }
+    /* Pin lil-gui to the right; keep it slim and unobtrusive */
+    .lil-gui.root {
+      position: fixed !important;
+      right: 0 !important;
+      top: 0 !important;
+      bottom: 0 !important;
+      background: rgba(12,12,12,0.92) !important;
+      border-left: 1px solid rgba(255,255,255,0.08) !important;
+      max-height: 100vh !important;
+      overflow-y: auto !important;
+      z-index: 5;
+    }
+    .hint {
+      position: fixed;
+      left: 12px;
+      bottom: 10px;
+      color: #8a8a8a;
+      font-size: 12px;
+      pointer-events: none;
+      user-select: none;
+    }
+  </style>
 </head>
 <body>
-    <div id="gui-container"></div>
-    <canvas id="webgl-canvas"></canvas>
+  <div id="app">
+    <canvas id="scene"></canvas>
+  </div>
+  <div class="hint">Drag to orbit • Scroll to zoom</div>
 
-    <script type="importmap">
-    {
-        "imports": {
-            "three": "https://unpkg.com/three@0.165.0/build/three.module.js",
-            "three/addons/": "https://unpkg.com/three@0.165.0/examples/jsm/",
-            "lil-gui": "https://cdn.jsdelivr.net/npm/lil-gui@0.19/+esm"
-        }
-    }
-    </script>
-    
-    <script type="module" src="main.js"></script>
+  <!-- Main module -->
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
