--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Iridescent Folding Crystal</title>
 
-  <!-- One and only one Three.js instance (pinned) -->
+  <!-- One Three.js instance for everything (addons resolve to same version) -->
   <script type="importmap">
   {
     "imports": {
