--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Iridescent Folding Crystal</title>
 
-  <!-- One Three.js instance for everything (addons resolve to same version) -->
+  <!-- Ensure a single Three.js instance; all addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -18,54 +18,24 @@
   <style>
     :root { --bg: #000; }
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: var(--bg);
-      overflow: hidden;
-      color: #ddd;
+      margin: 0; padding: 0; height: 100%;
+      background: var(--bg); color: #ddd; overflow: hidden;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
     }
-    #app {
-      position: fixed;
-      inset: 0;
-      background: var(--bg);
-    }
-    canvas#scene {
-      width: 100%;
-      height: 100%;
-      display: block;
-      background: var(--bg);
-    }
-    /* Minimal, fixed panel on the right */
+    #app { position: fixed; inset: 0; background: var(--bg); }
+    canvas#scene { width: 100%; height: 100%; display: block; background: var(--bg); }
+    /* Minimal right-side panel */
     .lil-gui.root {
-      position: fixed !important;
-      right: 0 !important;
-      top: 0 !important;
-      bottom: 0 !important;
-      background: rgba(12,12,12,0.92) !important;
-      border-left: 1px solid rgba(255,255,255,0.08) !important;
-      max-height: 100vh !important;
-      overflow-y: auto !important;
-      z-index: 5;
+      position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
+      width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
+      background: rgba(12,12,12,0.92) !important; border-left: 1px solid rgba(255,255,255,0.08) !important; z-index: 5;
     }
-    .hint {
-      position: fixed;
-      left: 12px;
-      bottom: 10px;
-      color: #8a8a8a;
-      font-size: 12px;
-      pointer-events: none;
-      user-select: none;
-    }
+    .hint { position: fixed; left: 12px; bottom: 10px; color: #8a8a8a; font-size: 12px; pointer-events: none; user-select: none; }
   </style>
 </head>
 <body>
-  <div id="app">
-    <canvas id="scene"></canvas>
-  </div>
+  <div id="app"><canvas id="scene"></canvas></div>
   <div class="hint">Drag to orbit • Scroll to zoom</div>
-
   <script type="module" src="./main.js"></script>
 </body>
 </html>
