--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Iridescent Folding Crystal</title>
 
-  <!-- Single Three.js instance; addons resolve to the same version -->
+  <!-- Single Three.js instance; addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -24,7 +24,7 @@
     }
     #app { position: fixed; inset: 0; background: var(--bg); }
     canvas#scene { width: 100%; height: 100%; display: block; background: var(--bg); }
-    /* minimal right-side panel */
+    /* Minimal right-side panel */
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
