--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Iridescent Folding Crystal</title>
+  <title>Twisting Cube — Feedback + RGBA Delay</title>
 
   <!-- One Three.js instance; addons resolve to this version -->
   <script type="importmap">
