--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Twisting Cube — Feedback + RGBA Delay</title>
+  <title>Deforming Iridescent Cube — Feedback + RGBA Delay</title>
 
   <!-- One Three.js instance; addons resolve to this version -->
   <script type="importmap">
@@ -20,12 +20,12 @@
     html, body {
       margin: 0; padding: 0; height: 100%;
       background: var(--bg); color: #ddd; overflow: hidden;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
     }
     #app { position: fixed; inset: 0; background: var(--bg); }
     canvas#scene { width: 100%; height: 100%; display: block; background: var(--bg); }
 
-    /* Minimal right-side panel */
+    /* Minimal, fixed right-side panel */
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
@@ -36,7 +36,7 @@
 </head>
 <body>
   <div id="app"><canvas id="scene"></canvas></div>
-  <div class="hint">Drag to orbit • Scroll to zoom</div>
+  <div class="hint">Drag to orbit • Scroll to zoom • [C]apture contact sheet</div>
   <script type="module" src="./main.js"></script>
 </body>
 </html>
