--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Deforming Iridescent Cube — Feedback + RGBA Delay</title>
 
-  <!-- One Three.js instance; addons resolve to this version -->
+  <!-- One Three.js instance; addons resolve to the same version -->
   <script type="importmap">
   {
     "imports": {
@@ -36,7 +36,7 @@
 </head>
 <body>
   <div id="app"><canvas id="scene"></canvas></div>
-  <div class="hint">Drag to orbit • Scroll to zoom • [C]apture contact sheet</div>
+  <div class="hint">Drag to orbit • Scroll to zoom • Press <b>C</b> for 4×4 contact sheet</div>
   <script type="module" src="./main.js"></script>
 </body>
 </html>
