--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Deforming Iridescent Cube — Feedback + RGBA Delay</title>
+  <title>Iridescent Folding Cube — Feedback + RGBA Delay</title>
 
-  <!-- One Three.js instance; addons resolve to the same version -->
+  <!-- One Three.js instance; addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -25,7 +25,7 @@
     #app { position: fixed; inset: 0; background: var(--bg); }
     canvas#scene { width: 100%; height: 100%; display: block; background: var(--bg); }
 
-    /* Minimal, fixed right-side panel */
+    /* Minimal right-side controls */
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
