--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Origata — Folding Iridescent Cube (Feedback + RGBA Delay)</title>
 
-  <!-- Single Three.js import; addons resolve to this version -->
+  <!-- Exactly one Three.js instance; all addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -29,7 +29,7 @@
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
-      background: rgba(12,12,12,0.92) !important; border-left: 1px solid rgba(255,255,255,0.08) !important; z-index: 5;
+      background: rgba(10,10,10,0.92) !important; border-left: 1px solid rgba(255,255,255,0.08) !important; z-index: 5;
       backdrop-filter: blur(6px);
     }
     .hint { position: fixed; left: 12px; bottom: 10px; color: #8a8a8a; font-size: 12px; pointer-events: none; user-select: none; }
