--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Origata — Folding Iridescent Cube (Feedback + RGBA Delay)</title>
+  <title>Origata — Folding Iridescent Cube (SDF + Feedback)</title>
 
-  <!-- Exactly one Three.js instance; all addons resolve to this version -->
+  <!-- Single Three.js; all addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -17,27 +17,25 @@
 
   <style>
     :root { --bg: #000; }
-    html, body {
-      margin: 0; padding: 0; height: 100%;
-      background: var(--bg); color: #ddd; overflow: hidden;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-    }
-    #app { position: fixed; inset: 0; background: var(--bg); }
-    canvas#scene { width: 100%; height: 100%; display: block; background: var(--bg); }
+    html, body { margin:0; padding:0; height:100%; background:#000; color:#ddd; overflow:hidden;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
+    #app { position: fixed; inset: 0; }
+    canvas#scene { width:100%; height:100%; display:block; background:#000; }
 
-    /* Minimal right-side controls */
+    /* Minimal, right-side controls */
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
-      background: rgba(10,10,10,0.92) !important; border-left: 1px solid rgba(255,255,255,0.08) !important; z-index: 5;
-      backdrop-filter: blur(6px);
+      background: rgba(10,10,10,0.92) !important; border-left: 1px solid rgba(255,255,255,0.08) !important;
+      z-index: 10; backdrop-filter: blur(6px);
     }
-    .hint { position: fixed; left: 12px; bottom: 10px; color: #8a8a8a; font-size: 12px; pointer-events: none; user-select: none; }
+    .hint { position: fixed; left: 12px; bottom: 10px; color: #8a8a8a; font-size: 12px; pointer-events:none; user-select:none; }
   </style>
 </head>
 <body>
   <div id="app"><canvas id="scene"></canvas></div>
-  <div class="hint">Drag to orbit • Scroll to zoom • Press <b>C</b> for 4×4 contact sheet</div>
+  <div class="hint">Press <b>C</b> for a 4×4 contact sheet • Sliders at right</div>
+
   <script type="module" src="./main.js"></script>
 </body>
 </html>
