--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Origata — Folding Iridescent Cube (SDF + Feedback)</title>
 
-  <!-- Single Three.js; all addons resolve to this version -->
+  <!-- Single Three.js instance; addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -22,7 +22,7 @@
     #app { position: fixed; inset: 0; }
     canvas#scene { width:100%; height:100%; display:block; background:#000; }
 
-    /* Minimal, right-side controls */
+    /* Minimal right-side controls */
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
@@ -34,7 +34,7 @@
 </head>
 <body>
   <div id="app"><canvas id="scene"></canvas></div>
-  <div class="hint">Press <b>C</b> for a 4×4 contact sheet • Sliders at right</div>
+  <div class="hint">Drag to orbit • Scroll to zoom • Press <b>C</b> for 4×4 contact sheet</div>
 
   <script type="module" src="./main.js"></script>
 </body>
