--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Origata — Folding Iridescent Cube (SDF + Feedback)</title>
 
-  <!-- Single Three.js instance; addons resolve to this version -->
+  <!-- Exactly one Three.js; all addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -16,7 +16,6 @@
   </script>
 
   <style>
-    :root { --bg: #000; }
     html, body { margin:0; padding:0; height:100%; background:#000; color:#ddd; overflow:hidden;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
     #app { position: fixed; inset: 0; }
