--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Origata — Folding Iridescent Cube (SDF + Feedback)</title>
+  <title>Origata — Folding Iridescent Cube (mesh folds + feedback)</title>
 
   <!-- Exactly one Three.js; all addons resolve to this version -->
   <script type="importmap">
@@ -21,7 +21,7 @@
     #app { position: fixed; inset: 0; }
     canvas#scene { width:100%; height:100%; display:block; background:#000; }
 
-    /* Minimal right-side controls */
+    /* Minimal, right-side controls */
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
