--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Origata — Folding Iridescent Cube (mesh folds + feedback)</title>
 
-  <!-- One Three.js only; addons resolve to this version -->
+  <!-- One Three.js; addons resolve to this version -->
   <script type="importmap">
   {
     "imports": {
@@ -18,17 +18,16 @@
   <style>
     html, body { margin:0; height:100%; background:#000; color:#ddd; overflow:hidden;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial; }
-    #app { position: fixed; inset:0; }
+    #app { position: fixed; inset: 0; }
     canvas#scene { width:100%; height:100%; display:block; background:#000; }
-
-    /* Minimal, right-side controller */
+    /* Minimal, right-side controls */
     .lil-gui.root {
       position: fixed !important; right: 0 !important; top: 0 !important; bottom: 0 !important;
       width: 300px !important; max-height: 100vh !important; overflow-y: auto !important;
       background: rgba(10,10,10,0.92) !important; border-left: 1px solid rgba(255,255,255,0.08) !important;
       z-index: 10; backdrop-filter: blur(6px);
     }
-    .hint { position: fixed; left:12px; bottom:10px; color:#8a8a8a; font-size:12px; pointer-events:none; user-select:none; }
+    .hint { position: fixed; left: 12px; bottom: 10px; color: #8a8a8a; font-size: 12px; pointer-events:none; user-select:none; }
   </style>
 </head>
 <body>
