--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
     <title>Folding Contact Sheet — three.js</title>
+
+    <!-- Import maps (maps the bare specifier "three" to a CDN).
+         The shim enables older browsers; modern ones just ignore it. -->
+    <script async src="https://ga.jspm.io/npm:es-module-shims@1.10.0/dist/es-module-shims.js"></script>
+    <script type="importmap">
+      {
+        "imports": {
+          "three": "https://cdn.jsdelivr.net/npm/three@0.165.0/build/three.module.js",
+          "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.165.0/examples/jsm/"
+        }
+      }
+    </script>
+
     <style>
       html, body {
         height: 100%;
@@ -14,13 +27,12 @@
         background: #000;
         color: #ddd;
         font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-        overflow: hidden; /* canvas takes full screen, gui overlays on the right */
+        overflow: hidden;
       }
       #app {
         position: fixed;
-        inset: 0; /* full-bleed canvas */
+        inset: 0;
       }
-      /* Keep the GUI on the right and minimal */
       .lil-gui.root {
         position: fixed !important;
         right: 0;
