--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
     }
     #app { position: fixed; inset: 0; }
+    /* Keep the controls minimal and on the right */
     .lil-gui.root {
       position: fixed !important;
       right: 12px; top: 12px;
@@ -24,18 +25,19 @@
     }
   </style>
 
-  <!-- Import map so example modules can resolve the bare "three" specifier -->
+  <!-- Polyfill import maps for all browsers (must come before the importmap) -->
+  <script async src="https://unpkg.com/es-module-shims@1.10.0/dist/es-module-shims.js"></script>
+
+  <!-- Import map so bare specifiers resolve -->
   <script type="importmap">
   {
     "imports": {
       "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-      "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+      "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
+      "lil-gui": "https://unpkg.com/lil-gui@0.19/dist/lil-gui.esm.min.js"
     }
   }
   </script>
-  <!-- (Optional) If you need widest browser support for import maps, include:
-  <script async src="https://unpkg.com/es-module-shims@1.10.0/dist/es-module-shims.wasm.js"></script>
-  -->
 </head>
 <body>
   <div id="app"></div>
@@ -43,7 +45,6 @@
     SDF folding + thin-film shader. Drag to orbit. Scroll to zoom.
   </div>
 
-  <!-- Your app entry -->
   <script type="module" src="main.js"></script>
 </body>
 </html>
