--- a/index.html
+++ b/index.html
@@ -2,49 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Folding Iridescent Shape — Three.js (SDF Ray March)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+  <title>Folding Iridescent Crystal — three.js</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <style>
     html, body {
-      margin: 0; height: 100%; overflow: hidden; background: #000;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+      margin: 0;
+      height: 100%;
+      overflow: hidden;
+      background: #000;
+      color: #e6e6e6;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
-    #app { position: fixed; inset: 0; }
-    /* Keep the controls minimal and on the right */
-    .lil-gui.root {
-      position: fixed !important;
-      right: 12px; top: 12px;
-      max-height: calc(100% - 24px);
+    .layout {
+      position: fixed; inset: 0;
+      display: grid;
+      grid-template-columns: 1fr 300px; /* right side panel */
+    }
+    #sceneHost { position: relative; background: #000; }
+    #ui {
+      border-left: 1px solid #222;
+      background: #0b0b0b;
+      padding: 10px 8px 14px 8px;
       overflow: auto;
-      border-radius: 8px;
-      backdrop-filter: blur(6px);
     }
-    .credits {
-      position: fixed; left: 12px; bottom: 10px; color: #a0a0a0; font-size: 12px;
-      mix-blend-mode: lighten; user-select: none; pointer-events: none;
+    h3 { margin: 8px 8px 6px 8px; font-weight: 600; }
+    .hint { font-size: 12px; line-height: 1.35; color: #a9a9a9; margin-top: 8px; }
+    .brand { font-size: 12px; color: #7a7a7a; margin: 10px 0 0 2px; }
+    canvas { display: block; }
+
+    /* lil-gui dark theme that blends with the panel */
+    .lil-gui {
+      --background-color: #0f0f10;
+      --text-color:#e6e6e6;
+      --title-background-color:#121215;
+      --widget-color:#1b1b1d;
+      --hover-color:#242428;
+      --focus-color:#2c2c31;
+      --number-color:#fff;
     }
   </style>
 
-  <!-- Polyfill import maps for all browsers (must come before the importmap) -->
-  <script async src="https://unpkg.com/es-module-shims@1.10.0/dist/es-module-shims.js"></script>
-
-  <!-- Import map so bare specifiers resolve -->
+  <!-- Import maps for bare-module imports used by main.js -->
   <script type="importmap">
-  {
-    "imports": {
-      "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-      "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
-      "lil-gui": "https://unpkg.com/lil-gui@0.19/dist/lil-gui.esm.min.js"
+    {
+      "imports": {
+        "three": "https://unpkg.com/three@0.165.0/build/three.module.js",
+        "three/addons/": "https://unpkg.com/three@0.165.0/examples/jsm/",
+        "lil-gui": "https://unpkg.com/lil-gui@0.19/dist/lil-gui.esm.min.js"
+      }
     }
-  }
   </script>
 </head>
 <body>
-  <div id="app"></div>
-  <div class="credits">
-    SDF folding + thin-film shader. Drag to orbit. Scroll to zoom.
+  <div class="layout">
+    <div id="sceneHost"></div>
+    <aside id="ui">
+      <h3>Folding Crystal</h3>
+      <div id="gui"></div>
+      <div class="hint">
+        <p><strong>Tips</strong></p>
+        <ul style="padding-left:18px; margin:6px 0;">
+          <li><em>Speed</em> = fold tempo, <em>Amplitude</em> = hinge angle.</li>
+          <li><em>Trails</em> controls afterimage time delay (0 off → 0.95 long).</li>
+          <li><em>Stripe Density/Warp/Sharpness</em> shape interference‑like bands.</li>
+          <li><em>Iridescence</em> &amp; <em>Film nm</em> tune the thin‑film color shift.</li>
+        </ul>
+      </div>
+      <div class="brand">three.js + custom GLSL · ACES tone mapping</div>
+    </aside>
   </div>
 
-  <script type="module" src="main.js"></script>
+  <!-- Main module (modules are deferred; do NOT add async) -->
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
